Fix footer logos not wrapping on small screens

--- a/app/assets/stylesheets/workflowhub.scss
+++ b/app/assets/stylesheets/workflowhub.scss
@@ -341,6 +341,7 @@ a.workflowhub-homepage-button {
 
 #footer-logos {
   display: flex;
+  flex-wrap: wrap;
   gap: 3em;
   justify-content: center;
   a {
